# crypto

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/v1/: market.py
app/core/: config.py  exceptions.py  logging.py
app/models/: requests.py  responses.py
app/services/: cache.py  exchange.py  local_cache.py  polling.py  redis_backend.py  websocket_manager.py
app/tests/: conftest.py  test_errors.py  test_ohlcv.py  test_ticker.py  test_websocket.py
